--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-  hello
-  <main></main>
+  <!-- hello<p align="center">
+      <img src="https://curriculum-content.s3.amazonaws.com/fewpjs/fewpjs-fetch-lab/Image_25_AsynchronousJavaScript.png" width="500">
+    </p> -->
+  <main>
+    <!-- <p align="center">
+    <img src="https://curriculum-content.s3.amazonaws.com/fewpjs/fewpjs-fetch-lab/Image_25_AsynchronousJavaScript.png" width="500">
+  </p> -->
+</main>
 </body>
 </html>
